--- a/package.json
+++ b/package.json
@@ -48,23 +48,32 @@
   },
   "dependencies": {
     "electron-compile": "^6.4.4",
-    "electron-devtools-installer": "^2.2.4",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-hot-loader": "^3.1.3"
+    "react-hot-loader": "^3.1.3",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.0",
+    "three": "^0.100.0"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-module-resolver": "^3.1.3",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "electron-devtools-installer": "^2.2.4",
     "electron-forge": "^5.2.4",
     "electron-prebuilt-compile": "4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "redux-devtools-extension": "^2.13.7"
   }
 }
